--- a/GameJam01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameJam01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -102,7 +102,6 @@ LastLogListing=LoadErrors
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Possessable_pawn.Possessable_pawn
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -618,6 +617,26 @@ ObjectProperty.DefaultValueCategory=True
 ObjectProperty.Events=True
 K2Node_VariableSet.Events=True
 Possessable_pawn_C.Default=True
+PhysicsThrusterComponent.Variable=True
+PhysicsThrusterComponent.TransformCommon=True
+PhysicsThrusterComponent.Sockets=True
+PhysicsThrusterComponent.Physics=True
+PhysicsThrusterComponent.Rendering=True
+PhysicsThrusterComponent.Tags=True
+PhysicsThrusterComponent.ComponentReplication=True
+PhysicsThrusterComponent.Activation=True
+PhysicsThrusterComponent.Cooking=True
+PhysicsThrusterComponent.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+K2Node_MakeStruct.PinOptions=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Possessable_pawn.Possessable_pawn;
@@ -1214,60 +1233,60 @@ ExternalImagePicker.TimeStamp=2018.03.16-17.47.18
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [DetailCustomWidgetExpansion]
-GeneralProjectSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-GameplayTagsSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-GameplayTagsDeveloperSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-GameMapsSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-MoviePlayerSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-ProjectPackagingSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-HardwareTargetingSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-AssetManagerSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-AISystem=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-AnimationSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-AudioSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-CollisionProfile=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-ConsoleSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-CookerSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-CrowdManager=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-EndUserSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-GameplayDebuggerConfig=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-GarbageCollectionSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-Engine=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-InputSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-RecastNavMesh=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-NavigationSystem=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-NetworkSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-PhysicsSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-RendererSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-RendererOverrideSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-SlateSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-StreamingSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-TutorialSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-UserInterfaceSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-LevelEditor2DSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-EditorProjectAppearanceSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-BlueprintEditorProjectSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-ClassViewerProjectSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-MovieSceneToolsProjectSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-MeshSimplificationSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-PaperImporterSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-UMGEditorProjectSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-AndroidRuntimeSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-ShaderPlatformQualitySettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-AndroidSDKSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-HTML5TargetSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-IOSRuntimeSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-LinuxTargetSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-MacTargetSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-WindowsTargetSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-AvfMediaSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-ImgMediaSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-LevelSequenceEditorSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-OculusHMDRuntimeSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-PaperRuntimeSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-TcpMessagingSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
-WmfMediaSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,
+GeneralProjectSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+GameplayTagsSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+GameplayTagsDeveloperSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+GameMapsSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+MoviePlayerSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+ProjectPackagingSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+HardwareTargetingSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+AssetManagerSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+AISystem=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+AnimationSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+AudioSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+CollisionProfile=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+ConsoleSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+CookerSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+CrowdManager=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+EndUserSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+GameplayDebuggerConfig=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+GarbageCollectionSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+Engine=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+InputSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+RecastNavMesh=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+NavigationSystem=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+NetworkSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+PhysicsSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+RendererSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+RendererOverrideSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+SlateSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+StreamingSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+TutorialSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+UserInterfaceSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+LevelEditor2DSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+EditorProjectAppearanceSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+BlueprintEditorProjectSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+ClassViewerProjectSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+MovieSceneToolsProjectSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+MeshSimplificationSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+PaperImporterSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+UMGEditorProjectSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+AndroidRuntimeSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+ShaderPlatformQualitySettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+AndroidSDKSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+HTML5TargetSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+IOSRuntimeSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+LinuxTargetSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+MacTargetSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+WindowsTargetSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+AvfMediaSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+ImgMediaSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+LevelSequenceEditorSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+OculusHMDRuntimeSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+PaperRuntimeSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+TcpMessagingSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
+WmfMediaSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [PluginBrowser]
@@ -1276,9 +1295,9 @@ InstalledPlugins=Substance
 [DetailPropertyExpansion]
 BoxComponent="\"Object.Shape.BoxExtent\" "
 ShapeComponent="\"Object.Shape.BoxExtent\" "
-PrimitiveComponent="\"Object.Shape.BoxExtent\" "
-SceneComponent="\"Object.Shape.BoxExtent\" "
-ActorComponent="\"Object.Shape.BoxExtent\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
