Character disappears when possessing another pawn

--- a/GameJam01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameJam01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,7 +74,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/Maps/Level01
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -97,11 +97,12 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/Level01
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Possessable_pawn.Possessable_pawn
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -637,6 +638,39 @@ SceneComponent.Activation=True
 SceneComponent.Cooking=True
 SceneComponent.Events=True
 K2Node_MakeStruct.PinOptions=True
+ThirdPersonCharacter_C.Variable=True
+ThirdPersonCharacter_C.Sockets=True
+ThirdPersonCharacter_C.ComponentReplication=True
+ThirdPersonCharacter_C.Events=True
+REINST_ThirdPersonCharacter_C_94.Variable=True
+REINST_ThirdPersonCharacter_C_94.TransformCommon=True
+REINST_ThirdPersonCharacter_C_94.Sockets=True
+REINST_ThirdPersonCharacter_C_94.Shape=True
+REINST_ThirdPersonCharacter_C_94.Navigation=True
+REINST_ThirdPersonCharacter_C_94.Rendering=True
+REINST_ThirdPersonCharacter_C_94.Physics=True
+REINST_ThirdPersonCharacter_C_94.Collision=True
+REINST_ThirdPersonCharacter_C_94.Tags=True
+REINST_ThirdPersonCharacter_C_94.ComponentReplication=True
+REINST_ThirdPersonCharacter_C_94.Cooking=True
+REINST_ThirdPersonCharacter_C_94.Events=True
+REINST_ThirdPersonCharacter_C_100.Variable=True
+REINST_ThirdPersonCharacter_C_100.TransformCommon=True
+REINST_ThirdPersonCharacter_C_100.Sockets=True
+REINST_ThirdPersonCharacter_C_100.Animation=True
+REINST_ThirdPersonCharacter_C_100.Mesh=True
+REINST_ThirdPersonCharacter_C_100.Materials=True
+REINST_ThirdPersonCharacter_C_100.Clothing=True
+REINST_ThirdPersonCharacter_C_100.ClothingSimulation=True
+REINST_ThirdPersonCharacter_C_100.Physics=True
+REINST_ThirdPersonCharacter_C_100.Collision=True
+REINST_ThirdPersonCharacter_C_100.Lighting=True
+REINST_ThirdPersonCharacter_C_100.Rendering=True
+REINST_ThirdPersonCharacter_C_100.Tags=True
+REINST_ThirdPersonCharacter_C_100.ComponentReplication=True
+REINST_ThirdPersonCharacter_C_100.Activation=True
+REINST_ThirdPersonCharacter_C_100.Cooking=True
+REINST_ThirdPersonCharacter_C_100.Events=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Possessable_pawn.Possessable_pawn;
@@ -1288,6 +1322,7 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
+ThirdPersonCharacter_C=ThirdPersonCharacter_C.Collision.Collision,
 
 [PluginBrowser]
 InstalledPlugins=Substance
