Possessed pawn jump

--- a/GameJam01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameJam01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,7 +74,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/Maps/Level01
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Geometry/Meshes
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -102,7 +102,6 @@ LastLogListing=PIE
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Possessable_pawn.Possessable_pawn
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -671,6 +670,16 @@ REINST_ThirdPersonCharacter_C_100.ComponentReplication=True
 REINST_ThirdPersonCharacter_C_100.Activation=True
 REINST_ThirdPersonCharacter_C_100.Cooking=True
 REINST_ThirdPersonCharacter_C_100.Events=True
+K2Node_CustomEvent.GraphNodeDetail=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.Navigation=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Possessable_pawn.Possessable_pawn;
@@ -1265,6 +1274,8 @@ MovieSceneCapture.TimeStamp=2018.03.16-17.47.29
 MovieSceneCapture.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2018.03.16-17.47.18
 ExternalImagePicker.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2018.03.16-17.47.42
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [DetailCustomWidgetExpansion]
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
@@ -1338,5 +1349,12 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 InputSettings=
+
+[AssetEditorToolkitTabLocation]
+/Game/ThirdPerson/Meshes/Linear_Stair_StaticMesh.Linear_Stair_StaticMesh=1
+/Game/Geometry/Meshes/1M_Cube.1M_Cube=1
+
+[DetailCategoriesAdvanced]
+StaticMeshComponent.Physics=True
 
 
