--- a/GameJam01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameJam01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,8 +74,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/Maps/Level01
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Geometry/Meshes
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Gamemode
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -92,6 +92,8 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/Maps/Level01
@@ -101,7 +103,8 @@ LastLogListing=PIE
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Possessable_pawn.Possessable_pawn
+OpenAssetsAtExit=/Game/Blueprints/Gamemode/BP_WinZone.BP_WinZone
+OpenAssetsAtExit=/Game/Blueprints/Gamemode/BP_WeightDependant_Button.BP_WeightDependant_Button
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -680,9 +683,99 @@ StaticMesh.StaticMesh=True
 StaticMesh.Collision=True
 StaticMesh.ImportSettings=True
 StaticMesh.Navigation=True
+WinZone_C.Tick=True
+WinZone_C.Rendering=True
+WinZone_C.Replication=True
+WinZone_C.Input=True
+WinZone_C.Actor=True
+ParticleSystemComponent.Variable=True
+ParticleSystemComponent.TransformCommon=True
+ParticleSystemComponent.Sockets=True
+ParticleSystemComponent.Particles=True
+ParticleSystemComponent.EmitterActions=True
+ParticleSystemComponent.Attachment=True
+ParticleSystemComponent.Lighting=True
+ParticleSystemComponent.Rendering=True
+ParticleSystemComponent.LOD=True
+ParticleSystemComponent.Tags=True
+ParticleSystemComponent.ComponentReplication=True
+ParticleSystemComponent.Activation=True
+ParticleSystemComponent.Cooking=True
+ParticleSystemComponent.Events=True
+ParticleSystem.ParticleSystem=True
+ParticleSystem.Thumbnail=True
+ParticleSystem.LOD=True
+ParticleSystem.Bounds=True
+ParticleSystem.Delay=True
+ParticleSystem.Performance=True
+ParticleSystem.MacroUV=True
+ParticleSystem.Occlusion=True
+ParticleSystem.Materials=True
+ParticleModuleSpawn.Spawn=True
+ParticleModuleSpawn.Burst=True
+ParticleModuleSpawn.Cascade=True
+ParticleModuleRequired.Emitter=True
+ParticleModuleRequired.Duration=True
+ParticleModuleRequired.Delay=True
+ParticleModuleRequired.SubUV=True
+ParticleModuleRequired.MacroUV=True
+ParticleModuleRequired.Rendering=True
+ParticleModuleRequired.ParticleCutout=True
+ParticleModuleRequired.Normals=True
+ParticleModuleRequired.Materials=True
+ParticleModuleLifetime.Lifetime=True
+ParticleModuleLifetime.Cascade=True
+ParticleModuleSize.Size=True
+ParticleModuleSize.Cascade=True
+ParticleModuleColorOverLife.Color=True
+ParticleModuleColorOverLife.Cascade=True
+ParticleSpriteEmitter.Particle=True
+ParticleSpriteEmitter.Cascade=True
+ParticleSpriteEmitter.Significance=True
+ParticleModuleVelocity.Velocity=True
+ParticleModuleVelocity.Cascade=True
+WinZone_C.TransformCommon=True
+ParticleSystemComponent.Materials=True
+ThirdPersonGameMode_C.Tick=True
+Button_C.Tick=True
+Button_C.Rendering=True
+Button_C.Replication=True
+Button_C.Input=True
+Button_C.Actor=True
+CustomMeshComponent.Variable=True
+CustomMeshComponent.TransformCommon=True
+CustomMeshComponent.Sockets=True
+CustomMeshComponent.Materials=True
+CustomMeshComponent.Lighting=True
+CustomMeshComponent.Rendering=True
+CustomMeshComponent.Tags=True
+CustomMeshComponent.ComponentReplication=True
+CustomMeshComponent.Activation=True
+CustomMeshComponent.Cooking=True
+CustomMeshComponent.Events=True
+Button_C.TransformCommon=True
+ArrayProperty.Variable=True
+ArrayProperty.DefaultValueCategory=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+K2Node_CallFunction.Graph=True
+BP_WeightDependant_Button_C.TransformCommon=True
+BP_WeightDependant_Button_C.Default=True
+BP_WeightDependant_Button_C.Rendering=True
+BP_WeightDependant_Button_C.Input=True
+BP_WeightDependant_Button_C.Actor=True
+BP_Master_Possessable_pawn_C.TransformCommon=True
+BP_Master_Possessable_pawn_C.Default=True
+BP_Master_Possessable_pawn_C.Pawn=True
+BP_Master_Possessable_pawn_C.Camera=True
+BP_Master_Possessable_pawn_C.Rendering=True
+BP_Master_Possessable_pawn_C.Input=True
+BP_Master_Possessable_pawn_C.Actor=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/Possessable_pawn.Possessable_pawn;
+RecentlyPlaced=/Game/Blueprints/Gamemode/BP_WeightDependant_Button.BP_WeightDependant_Button;
+RecentlyPlaced=/Game/Blueprints/Gamemode/BP_WinZone.BP_WinZone;
+RecentlyPlaced=/Game/Blueprints/Possessable_pawns/BP_Master_Possessable_pawn.BP_Master_Possessable_pawn;
 RecentlyPlaced=/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin;
 
 [RootWindow]
@@ -1276,6 +1369,10 @@ ExternalImagePicker.TimeStamp=2018.03.16-17.47.18
 ExternalImagePicker.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2018.03.16-17.47.42
 StaticMeshEditor.LastCompileMethod=Unknown
+Cascade.TimeStamp=2018.03.16-17.47.10
+Cascade.LastCompileMethod=Unknown
+DistCurveEditor.TimeStamp=2018.03.16-17.47.15
+DistCurveEditor.LastCompileMethod=Unknown
 
 [DetailCustomWidgetExpansion]
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
@@ -1341,20 +1438,66 @@ InstalledPlugins=Substance
 [DetailPropertyExpansion]
 BoxComponent="\"Object.Shape.BoxExtent\" "
 ShapeComponent="\"Object.Shape.BoxExtent\" "
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
-Object=
+PrimitiveComponent="\"Object.Shape.BoxExtent\" "
+SceneComponent="\"Object.Shape.BoxExtent\" "
+ActorComponent="\"Object.Shape.BoxExtent\" "
+Object="\"Object.Shape.BoxExtent\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 InputSettings=
+ParticleModuleSpawn="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModuleSpawnBase="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModule=
+ParticleModuleLifetime="\"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleSize="\"Object.Size.StartSize.Distribution\" "
+ParticleModuleSizeBase="\"Object.Size.StartSize.Distribution\" "
+ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+ParticleModuleVelocity="\"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
+ParticleModuleVelocityBase="\"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Meshes/Linear_Stair_StaticMesh.Linear_Stair_StaticMesh=1
 /Game/Geometry/Meshes/1M_Cube.1M_Cube=1
+/Game/Blueprints/Gamemode/ThirdPersonGameMode.ThirdPersonGameMode=1
+/Game/Particles/NewParticleSystem.NewParticleSystem=1
 
 [DetailCategoriesAdvanced]
 StaticMeshComponent.Physics=True
+
+[/Script/UnrealEd.CascadeOptions]
+ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
+ModuleColor_Beam_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Trail_Unselected=(B=170,G=235,R=130,A=0)
+ModuleColor_Trail_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Spawn_Unselected=(B=100,G=100,R=200,A=0)
+ModuleColor_Spawn_Selected=(B=50,G=50,R=255,A=0)
+ModuleColor_Light_Unselected=(B=49,G=40,R=90,A=0)
+ModuleColor_Light_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_SubUV_Unselected=(B=49,G=90,R=40,A=0)
+ModuleColor_SubUV_Selected=(B=100,G=200,R=50,A=0)
+ModuleColor_Required_Unselected=(B=100,G=200,R=200,A=0)
+ModuleColor_Required_Selected=(B=50,G=225,R=255,A=0)
+ModuleColor_Event_Unselected=(B=255,G=64,R=64,A=0)
+ModuleColor_Event_Selected=(B=255,G=0,R=0,A=0)
+GridColor_Hi=(B=255,G=100,R=0,A=0)
+GridColor_Low=(B=255,G=100,R=0,A=0)
+bShowParticleCounts=False
+bShowParticleEvents=False
+bShowParticleTimes=False
+bShowParticleDistance=False
+bShowParticleMemory=False
+ParticleMemoryUpdateTime=0.000000
+bShowFloor=False
+FloorMesh=/Engine/EditorMeshes/AnimTreeEd_PreviewFloor.AnimTreeEd_PreviewFloor
+FloorPosition=(X=0.000000,Y=0.000000,Z=0.000000)
+FloorRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+FloorScale=1.000000
+FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
+
+[CascadeEditor]
+LightDir=P=-44.999969 Y=-179.999969 R=0.000000
 
 
