--- a/GameJam01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameJam01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,8 +103,7 @@ LastLogListing=PIE
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Gamemode/BP_WinZone.BP_WinZone
-OpenAssetsAtExit=/Game/Blueprints/Gamemode/BP_WeightDependant_Button.BP_WeightDependant_Button
+OpenAssetsAtExit=/Game/Blueprints/Possessable_pawns/BP_Master_Possessable_pawn.BP_Master_Possessable_pawn
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -771,6 +770,11 @@ BP_Master_Possessable_pawn_C.Camera=True
 BP_Master_Possessable_pawn_C.Rendering=True
 BP_Master_Possessable_pawn_C.Input=True
 BP_Master_Possessable_pawn_C.Actor=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Actor=True
+BP_Master_Possessable_pawn_C.Tick=True
+BP_Master_Possessable_pawn_C.Replication=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Gamemode/BP_WeightDependant_Button.BP_WeightDependant_Button;
@@ -1441,7 +1445,7 @@ ShapeComponent="\"Object.Shape.BoxExtent\" "
 PrimitiveComponent="\"Object.Shape.BoxExtent\" "
 SceneComponent="\"Object.Shape.BoxExtent\" "
 ActorComponent="\"Object.Shape.BoxExtent\" "
-Object="\"Object.Shape.BoxExtent\" "
+Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
