--- a/GameJam01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameJam01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,7 +74,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/Maps/Level01
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Gamemode
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Possessable_pawns
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -104,6 +104,7 @@ LastLogListing=PIE
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/Possessable_pawns/BP_Master_Possessable_pawn.BP_Master_Possessable_pawn
+OpenAssetsAtExit=/Game/Blueprints/ThirdPersonBP/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -775,6 +776,33 @@ Actor.Rendering=True
 Actor.Actor=True
 BP_Master_Possessable_pawn_C.Tick=True
 BP_Master_Possessable_pawn_C.Replication=True
+BP_ThirdPersonCharacter_C.Default=True
+BP_ThirdPersonCharacter_C.Tick=True
+BP_ThirdPersonCharacter_C.Character=True
+BP_ThirdPersonCharacter_C.Camera=True
+BP_ThirdPersonCharacter_C.Pawn=True
+BP_ThirdPersonCharacter_C.Rendering=True
+BP_ThirdPersonCharacter_C.Replication=True
+BP_ThirdPersonCharacter_C.Input=True
+BP_ThirdPersonCharacter_C.Actor=True
+BP_ThirdPersonCharacter_C.Variable=True
+BP_ThirdPersonCharacter_C.TransformCommon=True
+BP_ThirdPersonCharacter_C.Sockets=True
+BP_ThirdPersonCharacter_C.Animation=True
+BP_ThirdPersonCharacter_C.Mesh=True
+BP_ThirdPersonCharacter_C.Materials=True
+BP_ThirdPersonCharacter_C.Clothing=True
+BP_ThirdPersonCharacter_C.ClothingSimulation=True
+BP_ThirdPersonCharacter_C.Physics=True
+BP_ThirdPersonCharacter_C.Collision=True
+BP_ThirdPersonCharacter_C.Lighting=True
+BP_ThirdPersonCharacter_C.Tags=True
+BP_ThirdPersonCharacter_C.ComponentReplication=True
+BP_ThirdPersonCharacter_C.Activation=True
+BP_ThirdPersonCharacter_C.Cooking=True
+BP_ThirdPersonCharacter_C.Events=True
+BP_ThirdPersonCharacter_C.Shape=True
+BP_ThirdPersonCharacter_C.Navigation=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Gamemode/BP_WeightDependant_Button.BP_WeightDependant_Button;
@@ -785,7 +813,7 @@ RecentlyPlaced=/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin;
 [RootWindow]
 ScreenPosition=X=289.000 Y=180.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1442,9 +1470,9 @@ InstalledPlugins=Substance
 [DetailPropertyExpansion]
 BoxComponent="\"Object.Shape.BoxExtent\" "
 ShapeComponent="\"Object.Shape.BoxExtent\" "
-PrimitiveComponent="\"Object.Shape.BoxExtent\" "
-SceneComponent="\"Object.Shape.BoxExtent\" "
-ActorComponent="\"Object.Shape.BoxExtent\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
@@ -1461,6 +1489,10 @@ ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Objec
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
 ParticleModuleVelocity="\"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
 ParticleModuleVelocityBase="\"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
+BP_ThirdPersonCharacter_C="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Character="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Pawn=
+REINST_BP_ThirdPersonCharacter_C_46="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Meshes/Linear_Stair_StaticMesh.Linear_Stair_StaticMesh=1
