Winzone now send you to next lvl, also fixed doorway collision

--- a/GameJam01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameJam01/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,7 +74,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/Maps/Level01
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Possessable_pawns
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Gamemode
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -103,8 +103,8 @@ LastLogListing=PIE
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Possessable_pawns/BP_Master_Possessable_pawn.BP_Master_Possessable_pawn
-OpenAssetsAtExit=/Game/Blueprints/ThirdPersonBP/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/Blueprints/Gamemode/ThirdPersonGameMode.ThirdPersonGameMode
+OpenAssetsAtExit=/Game/Blueprints/Gamemode/BP_WinZone.BP_WinZone
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -803,6 +803,33 @@ BP_ThirdPersonCharacter_C.Cooking=True
 BP_ThirdPersonCharacter_C.Events=True
 BP_ThirdPersonCharacter_C.Shape=True
 BP_ThirdPersonCharacter_C.Navigation=True
+Level01_C.Tick=True
+Level01_C.Replication=True
+Level01_C.Input=True
+Level01_C.Actor=True
+StrProperty.Variable=True
+StrProperty.DefaultValueCategory=True
+NameProperty.Variable=True
+NameProperty.DefaultValueCategory=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
+RadialForceComponent.TransformCommon=True
+RadialForceComponent.RadialForceComponent=True
+RadialForceComponent.Impulse=True
+RadialForceComponent.Force=True
+RadialForceComponent.Destructible=True
+RadialForceComponent.Rendering=True
+RadialForceComponent.Tags=True
+RadialForceComponent.ComponentReplication=True
+RadialForceComponent.Activation=True
+RadialForceComponent.Variable=True
+RadialForceComponent.Cooking=True
+BP_WinZone_C.TransformCommon=True
+BP_WinZone_C.Rendering=True
+BP_WinZone_C.Input=True
+BP_WinZone_C.Actor=True
+BP_WinZone_C.Tick=True
+BP_WinZone_C.Replication=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Gamemode/BP_WeightDependant_Button.BP_WeightDependant_Button;
@@ -813,7 +840,7 @@ RecentlyPlaced=/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin;
 [RootWindow]
 ScreenPosition=X=289.000 Y=180.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1463,6 +1490,9 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Ability,InputSettings.Bindings.ActionMappings.RetunToGhost,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 ThirdPersonCharacter_C=ThirdPersonCharacter_C.Collision.Collision,
+ArrayProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+ThirdPersonGameMode_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1493,12 +1523,17 @@ BP_ThirdPersonCharacter_C="\"Object.Character.CapsuleComponent.Object.Collision.
 Character="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 Pawn=
 REINST_BP_ThirdPersonCharacter_C_46="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ThirdPersonGameMode_C="\"Object.Levels\" \"Object.Levels\" "
+GameModeBase="\"Object.Levels\" \"Object.Levels\" "
+Info=
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Meshes/Linear_Stair_StaticMesh.Linear_Stair_StaticMesh=1
 /Game/Geometry/Meshes/1M_Cube.1M_Cube=1
 /Game/Blueprints/Gamemode/ThirdPersonGameMode.ThirdPersonGameMode=1
 /Game/Particles/NewParticleSystem.NewParticleSystem=1
+/Game/StaticMeshes/SM_Doorway.SM_Doorway=1
+/Game/Maps/Level01.Level01:PersistentLevel.Level01=1
 
 [DetailCategoriesAdvanced]
 StaticMeshComponent.Physics=True
